feat(commands): Add rank command